k3s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: production-api
      version: v1
  template:
    metadata:
      labels:
        app: production-api
        version: v1
    spec:
      containers:
      - name: api
        image: ballagan-telecom-api:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: production-api
      version: v2
  template:
    metadata:
      labels:
        app: production-api
        version: v2
    spec:
      containers:
      - name: api
        image: ballagan-telecom-api:canary
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
